<resources>
    <string name="app_name">LetsGO-App</string>
    <string name="title_activity_main2">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Page %1$d</string>
    <string name="button_send">login</string>
    <string name="edit_message">Enter your account ID</string>
    <string name="edit_password">Enter account password</string>
    <string name="Account_ID">Account ID:</string>
    <string name="Account_password">Password:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Contact_admin">Request Account</string>
    <string name="Sendmgs">Send</string>
    <string name="SendmsgID">Add recipent name</string>
    <string name="encryptmsg">Set a message timer</string>
    <string name="MsgBox">Input your message</string>
    <string name="Add_contact">Add</string>
    <string name="Employee_id">Input employee id</string>
    <string name="Employee_name">Input employee name</string>
    <string name="Employee_email">Input Employee email</string>
    <string name="contacts_number"># contacts</string>
    <string name="viewDetailedName">Contact name</string>
    <string name="viewDetailedId">Contact ID</string>
    <string name="MsgHeader">Subject:</string>
    <string name="Register_Name">Enter name</string>
    <string name="Register_ID">Enter Username</string>
    <string name="Register_Password1">Create Password</string>
    <string name="Register_Password2">Re-enter Password</string>
</resources>
