<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar8"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Register_ID"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Register_Password1"
        android:inputType="textPassword"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Register_Password2"
        android:inputType="textPassword"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="17dp"
        android:onClick="register"
        android:text="Register"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Register_Name"
        android:inputType="none|textPersonName"
        android:layout_marginLeft="85dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Registration"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar8"
        app:layout_constraintTop_toTopOf="@+id/toolbar8" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="17dp"
        android:onClick="swapToLogin"
        android:text="Cancel"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

</android.support.constraint.ConstraintLayout>