<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText3"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="259dp"
        android:layout_height="0dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:hint="@string/MsgBox"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/Sendmgs"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="122dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/encryptmsg"
        android:inputType="numberPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/SendmsgID"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvFragThird"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
